load("@bazel_skylib//lib:selects.bzl", "selects")

uthread_srcs = [

] + select({
    "//bazel/config:async_simple_with_uthread": [
        "async_simple/uthread/internal/thread_impl.h",
        # "async_simple/uthread/internal/thead.h",
        "async_simple/uthread/internal/thread.cc",
    ],
    "//conditions:default" : [],
}) + select({
    ":linux_x86_64_with_uthread": glob(["async_simple/uthread/internal/x86_64/*.S"]),
    ":linux_aarch64_with_uthread": glob(["async_simple/uthread/internal/aarch64/*.S"]),
    ":linux_ppc64le_with_uthread": glob(["async_simple/uthread/internal/ppc64le/*.S"]),
})

uthread_hdrs = glob([
    "async_simple/uthread/internal/thread.h",
    "async_simple/uthread/*.h",
])

cc_library(
    name = "async_simple",
    srcs = [
        "async_simple/experimental/coroutine.h",
        "async_simple/executors/SimpleExecutor.cpp",
    ] + uthread_srcs,
    hdrs = glob([
        "async_simple/*.h",
        "async_simple/executors/*.h",
        "async_simple/coro/*.h",
        "async_simple/util/*.h"
    ]) + select({
        "//bazel/config:async_simple_with_uthread" : uthread_hdrs,
        "//conditions:default" : [],
    }),
    copts = [
        "-Wall",
        "-Werror",
        "-g",
    ],
    visibility = ["//visibility:public"],
    linkopts = select({
        "//bazel/config:async_simple_has_not_aio" : [],
        "//conditions:default" : ["-laio"],
    }),
    defines = select({
        "//bazel/config:async_simple_has_not_aio" : ["ASYNC_SIMPLE_HAS_NOT_AIO"],
        "//conditions:default" : [],
    }),
)

selects.config_setting_group(
    name = "linux_x86_64_with_uthread",
    match_all = [
        "//bazel/config:async_simple_with_uthread",
        "//bazel/config:linux_x86_64",
    ],
)

selects.config_setting_group(
    name = "linux_aarch64_with_uthread",
    match_all = [
        "//bazel/config:async_simple_with_uthread",
        "//bazel/config:linux_aarch64",
    ],
)

selects.config_setting_group(
    name = "linux_ppc64le_with_uthread",
    match_all = [
        "//bazel/config:async_simple_with_uthread",
        "//bazel/config:linux_ppc64le"
    ],
)
